[tool.poetry]
name = "octopus-energy-api"
version = "0.8.1"
description = "Wrapper for communicating with the Octopus Energy API"
authors = ["Chris Jones <c.jones@swansea.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "octopus_energy_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
