[tool.poetry]
name = "octopus-energy-api"
version = "0.8.2a0"
description = "Wrapper for communicating with the Octopus Energy API"
authors = ["Euan Campbell <dev@euan.app>","Chris Jones <chris@brasskipper.org.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "octopus_energy_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest-mock = "^3.6.1"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
